--- a/core/src/main/flex/org/dukecon/itemrenderer/ScheduleDayItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/ScheduleDayItemRenderer.mxml
@@ -39,7 +39,7 @@
 
             if (data) {
                 var matches:Array = String(data).match(/(\d\d\d\d)-(\d\d)-(\d\d)/);
-                date = new Date(int(matches[1]), int(matches[2]), int(matches[3]));
+                date = new Date(int(matches[1]), int(matches[2]) - 1, int(matches[3]));
                 formattedData = formatter.format(date);
                 dayString = dayFormatter.format(date);
             }
