--- a/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
@@ -17,34 +17,50 @@
 
     <fx:Script>
     <![CDATA[
-            import mx.collections.ArrayCollection;
+        import mx.collections.ArrayCollection;
 
-            import org.dukecon.controller.ConferenceController;
-            import org.dukecon.events.ConferenceDataChangedEvent;
-            import org.dukecon.events.ListEvent;
+        import org.dukecon.controller.ConferenceController;
+        import org.dukecon.events.ConferenceDataChangedEvent;
+        import org.dukecon.events.ListEvent;
+        import org.spicefactory.lib.reflect.ClassInfo;
+        import org.spicefactory.parsley.core.context.Context;
+        import org.spicefactory.parsley.core.context.provider.Provider;
+        import org.spicefactory.parsley.core.messaging.MessageReceiverRegistry;
+        import org.spicefactory.parsley.core.scope.ScopeName;
+        import org.spicefactory.parsley.messaging.receiver.DefaultMessageHandler;
+        import org.spicefactory.parsley.messaging.receiver.MessageReceiverInfo;
 
-            [Bindable]
-            protected var listData:ArrayCollection;
+        [Bindable]
+        protected var listData:ArrayCollection;
 
-            [Inject]
-            public var conferenceController:ConferenceController;
+        [Inject]
+        public var conferenceController:ConferenceController;
 
-            [Init]
-            public function init():void {
-                    conferenceController.addEventListener(
-                            ConferenceDataChangedEvent.CONFERENCE_DATA_CHANGED, onConferenceDataChanged);
-                    listData = conferenceController.days;
-                    list.addEventListener(ListEvent.ITEM_SELECTED, onDaySelected)
-            }
+        [Inject]
+        public var context:Context;
 
-            protected function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
-                    listData = conferenceController.days;
-            }
+        [Init]
+        public function init():void {
+            listData = conferenceController.days;
+            list.addEventListener(ListEvent.ITEM_SELECTED, onDaySelected);
 
-            protected function onDaySelected(event:ListEvent):void {
-                    navigator.pushView(ScheduleDayView, event.data);
-            }
-            ]]>
+            var registry:MessageReceiverRegistry = context.scopeManager.getScope(ScopeName.GLOBAL).messageReceivers;
+            var info:MessageReceiverInfo = new MessageReceiverInfo();
+            info.type = ClassInfo.forClass(ConferenceDataChangedEvent);
+            var handler:DefaultMessageHandler = new DefaultMessageHandler(info);
+            handler.init(Provider.forInstance(this), ClassInfo.forInstance(this).getMethod("onConferenceDataChanged"));
+            registry.addTarget(handler);
+        }
+
+        [MessageHandler]
+        public function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
+            listData = conferenceController.days;
+        }
+
+        protected function onDaySelected(event:ListEvent):void {
+            navigator.pushView(ScheduleDayView, event.data);
+        }
+        ]]>
     </fx:Script>
 
     <s:List id="list" width="100%" height="100%"
