- ensured the talk-data is read ... (was commented out)

--- a/core/src/main/flex/org/dukecon/views/MainView.mxml
+++ b/core/src/main/flex/org/dukecon/views/MainView.mxml
@@ -40,7 +40,7 @@
         }
 
         protected function onRefreshClicked(event:MouseEvent):void {
-//            conferenceController.updateTalks();
+            conferenceController.updateTalks();
 //            if (authController.loggedIn) {
                 userPreferenceController.readUserPreferences(navigator);
 //            }
@@ -48,11 +48,11 @@
 
 /*        protected function onLoginClicked(event:MouseEvent):void {
             authController.login(navigator);
-        }*/
+        }
 
         protected function onLogoutClicked(event:MouseEvent):void {
-//            navigator.pushView(AuthView, "logout");
-        }
+            navigator.pushView(AuthView, "logout");
+        }*/
 
         ]]>
   </fx:Script>
