--- a/core/src/main/flex/DukeConStyle.css
+++ b/core/src/main/flex/DukeConStyle.css
@@ -21,6 +21,48 @@
     color: #FFFFFF;
 }
 
+.talkTitle {
+    fontFamily: _sans;
+    fontWeight: bold;
+    fontSize: 30px;
+    color: #1AA3B1;
+}
+
+.talkSpeakers {
+    fontFamily: _sans;
+    fontWeight: bold;
+    fontSize: 26px;
+    color: #000000;
+}
+
+.talkTime {
+    fontFamily: _sans;
+    fontWeight: normal;
+    fontSize: 26px;
+    color: #444444;
+}
+
+.talkLocation {
+    fontFamily: _sans;
+    fontWeight: normal;
+    fontSize: 26px;
+    color: #444444;
+}
+
+.talkTrack {
+    fontFamily: _sans;
+    fontWeight: normal;
+    fontSize: 26px;
+    color: #444444;
+}
+
+.talkLanguage {
+    fontFamily: _sans;
+    fontWeight: normal;
+    fontSize: 26px;
+    color: #444444;
+}
+
 .subTitle {
     fontFamily: _sans;
     fontWeight: normal;
