--- a/core/src/main/flex/org/dukecon/itemrenderer/TalkItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/TalkItemRenderer.mxml
@@ -25,22 +25,33 @@
         [Inject]
         public var trackController:TrackController;
 
-        override protected function commitProperties():void {
-            super.commitProperties();
+
+        [Bindable("dataChange")]
+        override public function get data():Object {
+            return super.data;
+        }
+
+        override public function set data(value:Object):void {
+            super.data = value;
 
             talk = Talk(data);
             if (data) {
-                trackIcon = trackController.getIconForTrack(talk.track.id);
+                trackIcon = trackController.getIconForTrack(talk.trackId);
             } else {
                 trackIcon = null;
             }
+        }
+
+        override protected function commitProperties():void {
+            super.commitProperties();
+
             itemLabel.width = this.parent.parent.width - 168;
 
             invalidateDisplayList();
         }
 
         protected function onItemClick(event:MouseEvent):void {
-            dispatchEvent(new ListEvent(data, ListEvent.ITEM_SELECTED));
+            dispatchEvent(new ListEvent(talk, ListEvent.ITEM_SELECTED));
         }
         ]]>
   </fx:Script>
