--- a/core/src/main/flex/org/dukecon/itemrenderer/header/RoomItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/header/RoomItemRenderer.mxml
@@ -6,6 +6,11 @@
 
     <fx:Script>
     <![CDATA[
+        import org.dukecon.model.Room;
+
+        [Bindable]
+        protected var roomName:String;
+
         [Bindable("dataChange")]
         override public function get data():Object {
             return super.data;
@@ -13,6 +18,7 @@
 
         override public function set data(value:Object):void {
             super.data = value;
+            roomName = Room(value.room).name;
         }
         ]]>
   </fx:Script>
@@ -24,7 +30,7 @@
     </s:Rect>
 
     <s:VGroup width="100%" height="320" verticalAlign="middle" horizontalAlign="center">
-        <s:Label text="{data.location}" rotationZ="-90" styleName="title"/>
+        <s:Label text="{roomName}" rotationZ="-90" styleName="title"/>
     </s:VGroup>
 
 </s:GridItemRenderer>
