--- a/core/src/main/flex/org/dukecon/views/TalkView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TalkView.mxml
@@ -52,6 +52,12 @@
         [Bindable]
         protected var speakers:String;
 
+        [Bindable]
+        protected var roomName:String;
+
+        [Bindable]
+        protected var trackName:String;
+
         [Inject]
         public var conferenceController:ConferenceController;
 
@@ -67,15 +73,15 @@
                 talk = Talk(data);
                 updateSelectionIcon();
                 if (talk) {
-                    language = talk.language.id;
-                    trackIcon = trackController.getIconForTrack(talk.track.id);
+                    language = talk.languageId;
+                    trackIcon = trackController.getIconForTrack(talk.trackId);
                 } else {
                     language = null;
                     trackIcon = null;
                 }
                 speakers = "";
-                if (talk.speakers) {
-                    for each(var speaker:Object in talk.speakers) {
+                if (talk.speakerIds) {
+                    for each(var speaker:Object in talk.speakerIds) {
                         if (speaker) {
                             if (speakers.length > 0) {
                                 speakers += " | ";
@@ -86,6 +92,8 @@
                 }
                 title = startTimeFormatter.format(talk.start) + " - " + endTimeFormatter.format(talk.end);
                 ratingGroup.selectedValue = conferenceController.getRating(talk);
+                roomName = conferenceController.getRoom(talk.roomId).name;
+                trackName = conferenceController.getTrack(talk.trackId).names['de'];
             }
         }
 
@@ -152,11 +160,11 @@
             </s:HGroup>
             <s:HGroup>
                 <s:Label text="{resourceManager.getString('dukecon', 'talks.room')}:" fontWeight="bold"/>
-                <s:Label text="{talk.room.id}" styleName="content"/>
+                <s:Label text="{roomName}" styleName="content"/>
             </s:HGroup>
             <s:HGroup>
                 <s:Label text="{resourceManager.getString('dukecon', 'talks.track')}:" fontWeight="bold"/>
-                <s:Label text="{talk.track}" styleName="content"/>
+                <s:Label text="{trackName}" styleName="content"/>
             </s:HGroup>
             <s:HGroup>
                 <s:Label text="{resourceManager.getString('dukecon', 'talks.rating')}:" fontWeight="bold"/>
