--- a/core/src/main/flex/org/dukecon/views/TrackView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TrackView.mxml
@@ -25,37 +25,38 @@
         import org.dukecon.controller.ConferenceController;
         import org.dukecon.controller.TrackController;
         import org.dukecon.events.ListEvent;
+        import org.dukecon.model.Track;
 
         [Bindable]
-            protected var track:String;
+        protected var track:Track;
 
-            [Bindable]
-            protected var trackIcon:Class;
+        [Bindable]
+        protected var trackIcon:Class;
 
-            [Bindable]
-            protected var talks:ArrayCollection;
+        [Bindable]
+        protected var talks:ArrayCollection;
 
-            [Inject]
-            public var conferenceController:ConferenceController;
+        [Inject]
+        public var conferenceController:ConferenceController;
 
-            [Inject]
-            public var trackController:TrackController;
+        [Inject]
+        public var trackController:TrackController;
 
-            protected function onCreationComplete(event:FlexEvent):void {
-                    talkList.addEventListener(ListEvent.ITEM_SELECTED, onTalkSelected);
-            }
+        protected function onCreationComplete(event:FlexEvent):void {
+            talkList.addEventListener(ListEvent.ITEM_SELECTED, onTalkSelected);
+        }
 
-            override protected function commitProperties():void {
-                    super.commitProperties();
-                    track = String(data);
-                    trackIcon = trackController.getIconForTrack(track);
-                    talks = conferenceController.getTalksForTrack(track);
-            }
+        override protected function commitProperties():void {
+            super.commitProperties();
+            track = Track(data);
+            trackIcon = trackController.getIconForTrack(track.id);
+            talks = conferenceController.getTalksForTrack(track);
+        }
 
-            protected function onTalkSelected(event:ListEvent):void {
-                    navigator.pushView(TalkView, event.data);
-            }
-            ]]>
+        protected function onTalkSelected(event:ListEvent):void {
+            navigator.pushView(TalkView, event.data);
+        }
+        ]]>
     </fx:Script>
 
     <s:navigationContent>
@@ -71,7 +72,7 @@
                     </s:fill>
                 </s:Rect>
 
-                <s:Label text="{track}" top="22" left="20" width="440" styleName="title"/>
+                <s:Label text="{track.names['de']}" top="22" left="20" width="440" styleName="title"/>
 
                 <s:Rect top="20" right="20" width="120" height="120">
                     <s:fill>
