--- a/core/src/main/flex/org/dukecon/views/TracksView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TracksView.mxml
@@ -63,7 +63,7 @@
         ]]>
   </fx:Script>
 
-    <s:List id="list" width="100%" height="100%"
+    <s:List id="list" width="100%" height="100%" horizontalScrollPolicy="off"
             itemRenderer="org.dukecon.itemrenderer.TrackItemRenderer"
             dataProvider="{listData}"/>
 
