--- a/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
@@ -55,7 +55,7 @@
     <u:VectorImage source="{trackIcon}" top="8" left="8" width="120" bottom="8"/>
 
     <s:HGroup top="8" left="150" right="18" bottom="8" verticalAlign="middle">
-        <s:Label id="itemLabel" text="{track.names['de']}" styleName="listTitle"/>
+        <s:Label id="itemLabel" text="{track.names[resourceManager.localeChain[0]]}" styleName="listTitle"/>
     </s:HGroup>
 
 </s:ItemRenderer>
