--- a/core/src/main/flex/org/dukecon/views/SettingsView.mxml
+++ b/core/src/main/flex/org/dukecon/views/SettingsView.mxml
@@ -14,7 +14,7 @@
 
     <fx:Declarations>
         <parsley:Configure/>
-        <s:RadioButtonGroup id="languageGroup" change="onLanguageChange(event)"/>
+        <!--s:RadioButtonGroup id="languageGroup" change="onLanguageChange(event)"/-->
     </fx:Declarations>
 
     <s:navigationContent>
@@ -26,10 +26,20 @@
 
         import mx.events.FlexEvent;
 
+        import org.dukecon.controller.ConferenceController;
+
         import org.dukecon.controller.SettingsController;
+        import org.dukecon.model.Language;
+
+        import spark.components.RadioButton;
+
+        [Inject]
+        public var conferenceController:ConferenceController;
 
         [Inject]
         public var settingsController:SettingsController;
+
+        protected var languageButtons:Array;
 
         protected function onCreationComplete(event:FlexEvent):void {
             // Hide the settings action button.
@@ -38,17 +48,25 @@
                     button.visible = false;
                 }
             }
-        }
 
+            languageButtons = [];
+            for each(var language:Language in conferenceController.languages) {
+                var languageButton:RadioButton = new  RadioButton();
+                languageButton.label = language.names[language.id];
+                languageButton.value = language.id;
+                languageButton.selected = (language.id == resourceManager.localeChain[0]);
+                languageButton.addEventListener("change", onLanguageChange);
+                languageSelection.addElement(languageButton);
+                languageButtons.push(languageButton);
+            }
+        }
 
         override protected function commitProperties():void {
             super.commitProperties();
 
             // Select the currently selected locale button.
-            if (resourceManager.localeChain[0] == "en_US") {
-                englishButton.selected = true;
-            } else {
-                germanButton.selected = true;
+            for each(var languageButton:RadioButton in languageButtons) {
+                languageButton.selected = (languageButton.value == resourceManager.localeChain[0]);
             }
 
             // Hide the button that currently should not be displayed.
@@ -74,8 +92,12 @@
         }
 
         protected function onLanguageChange(event:Event):void {
-            resourceManager.localeChain = [languageGroup.selectedValue];
-            settingsController.selectedLanguage = String(languageGroup.selectedValue);
+            var selectedLanguage:String = String(RadioButton(event.target).value);
+
+            resourceManager.localeChain = [selectedLanguage];
+            settingsController.selectedLanguage = String(selectedLanguage);
+
+            trace("Changed language to: " + selectedLanguage);
         }
 
         protected function onBindClicked(event:MouseEvent):void {
@@ -89,10 +111,8 @@
     </fx:Script>
 
     <s:Form width="100%">
-        <s:FormItem label="{resourceManager.getString('dukecon', 'settings.language')}:" width="300">
-            <s:RadioButton id="englishButton" groupName="languageGroup" label="English" value="en_US"/>
-            <s:RadioButton id="germanButton" groupName="languageGroup" label="Deutsch" value="de_DE"/>
-        </s:FormItem>
+        <s:FormItem id="languageSelection" label="{resourceManager.getString('dukecon', 'settings.language')}:"
+                     width="300"/>
         <s:FormItem label="{resourceManager.getString('dukecon', 'settings.server-account')}:" width="300">
             <s:Button id="bindButton" label="{resourceManager.getString('dukecon', 'settings.server-account.bind')}"
                       click="onBindClicked(event)" width="100%"/>
