--- a/core/src/main/flex/org/dukecon/views/TrackView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TrackView.mxml
@@ -72,7 +72,7 @@
                     </s:fill>
                 </s:Rect>
 
-                <s:Label text="{track.names['de']}" top="22" left="20" width="440" styleName="title"/>
+                <s:Label text="{track.names[resourceManager.localeChain[0]]}" top="22" left="20" width="440" styleName="title"/>
 
                 <s:Rect top="20" right="20" width="120" height="120">
                     <s:fill>
